Add full Petaluma Chicken Scratch track page

--- a/albums/ashes-and-echoes/tracks/petaluma-chicken-scratch.html
+++ b/albums/ashes-and-echoes/tracks/petaluma-chicken-scratch.html
@@ -1,90 +1,134 @@
-<!DOCTYPE html>
+<!doctype html>
 <html lang="en">
 <head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Petaluma Chicken Scratch | Ashes and Echoes | Mycal</title>
-  <meta name="description" content="Petaluma Chicken Scratch is a barn-burning bluegrass closer with fiddles and foot-stomps under desert stars.">
-  <link rel="icon" type="image/png" href="/favicon-96x96.png" sizes="96x96">
-  <link rel="icon" type="image/svg+xml" href="/favicon.svg">
-  <link rel="shortcut icon" href="/favicon.ico">
-  <link rel="apple-touch-icon" sizes="180x180" href="/apple-touch-icon.png">
-  <link rel="manifest" href="/site.webmanifest">
+  <meta charset="utf-8">
+  <title>Petaluma Chicken Scratch – Mycal</title>
   <link rel="stylesheet" href="/assets/css/style.css">
-</head>
-<body>
-  <header>
-    <nav class="navbar" aria-label="Primary">
-      <a class="logo" href="/">
-        <span>music.mycal.net</span>
-      </a>
-      <div class="nav-links">
-        <a href="/albums/ashes-and-echoes/">Album</a>
-        <a href="/albums/ashes-and-echoes/#tracklist">Tracklist</a>
-      </div>
-    </nav>
-  </header>
 
-  <main>
-    <section class="hero">
-      <img src="/assets/img/tracks/petaluma-chicken-scratch.jpg" alt="Cover art for Petaluma Chicken Scratch">
-      <div class="hero-content">
-        <p class="meta">Ashes and Echoes — Track 14</p>
-        <h1>Petaluma Chicken Scratch</h1>
-        <p>Fiddle breakdowns and rollicking banjo riffs to end the night with dust-covered dancing.</p>
-        <div class="button-row">
-          <a class="button" href="https://distrokid.com/hyperfollow/mycal/ashes-and-echoes-songs-from-the-playa-stories-from-fire-and-steel" target="_blank" rel="noopener">Stream</a>
-          <a class="button" href="/albums/ashes-and-echoes/">Back to album</a>
-        </div>
-      </div>
-    </section>
-
-    <section class="section" aria-labelledby="lyrics-heading">
-      <h2 id="lyrics-heading">Lyrics</h2>
-      <pre class="lyrics-block">
-Lyrics coming soon.
-      </pre>
-    </section>
-  </main>
-
-  <footer>
-    <div class="footer-inner">
-      <div>© 2025 Mycal Music</div>
-      <div class="nav-links">
-        <a href="/albums/ashes-and-echoes/">Album</a>
-        <a href="/">Home</a>
-      </div>
-    </div>
-  </footer>
-
+  <!-- JSON-LD for this track -->
   <script type="application/ld+json">
   {
     "@context": "https://schema.org",
     "@type": "MusicRecording",
     "@id": "https://music.mycal.net/albums/ashes-and-echoes/tracks/petaluma-chicken-scratch",
     "name": "Petaluma Chicken Scratch",
-    "duration": "PT5M49S",
-    "inLanguage": "en",
     "byArtist": {
       "@type": "MusicGroup",
       "name": "Mycal"
     },
     "inAlbum": {
       "@type": "MusicAlbum",
-      "@id": "https://music.mycal.net/albums/ashes-and-echoes"
+      "@id": "https://music.mycal.net/albums/ashes-and-echoes",
+      "name": "Ashes and Echoes — Songs from the Playa"
     },
-    "genre": ["Bluegrass", "Burning Man"],
+    "duration": "PT5M49S",
+    "position": 14,
+    "genre": ["Folk", "Roots", "Storytelling", "Petaluma"],
     "datePublished": "2025-08-15",
     "image": "https://music.mycal.net/assets/img/tracks/petaluma-chicken-scratch.jpg",
     "url": "https://music.mycal.net/albums/ashes-and-echoes/tracks/petaluma-chicken-scratch",
-    "sameAs": [
-      "https://distrokid.com/hyperfollow/mycal/ashes-and-echoes-songs-from-the-playa-stories-from-fire-and-steel"
-    ],
+    "description": "\"Petaluma Chicken Scratch\" is a hometown legend turned into song — a backyard strain, a Burning Man gift cycle, and a community myth grown from soil, sun, and shared stories.",
     "lyrics": {
       "@type": "CreativeWork",
-      "text": "Lyrics coming soon."
+      "text": "Full lyrics available on this page at https://music.mycal.net/albums/ashes-and-echoes/tracks/petaluma-chicken-scratch"
     }
   }
   </script>
+</head>
+<body>
+  <main class="track-page">
+    <header class="track-header">
+      <a href="/albums/ashes-and-echoes/" class="back-link">← Back to Ashes and Echoes</a>
+      <h1>Petaluma Chicken Scratch</h1>
+      <p>Track 14 · 5:49 · Ashes and Echoes — Songs from the Playa</p>
+    </header>
+
+    <section class="track-media">
+      <img src="/assets/img/tracks/petaluma-chicken-scratch.jpg"
+           alt="Cover art for Petaluma Chicken Scratch"
+           class="track-image">
+
+      <div class="track-links">
+        <a href="#" class="btn">Listen on Spotify</a>
+        <a href="#" class="btn">Bandcamp</a>
+        <a href="#" class="btn">YouTube Music</a>
+      </div>
+    </section>
+
+    <section class="track-description">
+      <h2>About this track</h2>
+      <p>
+        “Petaluma Chicken Scratch” is a celebration of backyard legends — homegrown strains,
+        compost-powered magic, Burning Man gifting culture, and the way a local story becomes
+        a mythology shared across seasons. Part roots-folk, part playful anthem, all Petaluma pride.
+      </p>
+    </section>
+
+    <section class="lyrics">
+      <h2>Lyrics</h2>
+      <pre>
+🐔 Petaluma Chicken Scratch: A Local Legend 🌱❤️
+
+It started out with a cookie clone,
+Guava wind and garden stone.
+Brother-in-law with a backyard plan,
+Dirt on our hands, and a sunburn tan.
+Seeds took root and the flavors bloomed,
+Guava Cookie in a smokey room.
+Next year came with a chili kick,
+Clearlake fire made the cross stick.
+
+Scratch that ground, Petaluma pride,
+Sativa dreams on a compost ride.
+Starts in hand, we pass it back,
+Born from soil and a chicken shack.
+Oh, Petaluma Chicken Scratch —
+The legend grows, you can’t match that!
+The legend grows, you can’t match that!
+
+Burning Man crew said, “Turn it up!”
+Snicker Doodle made the flowers erupt.
+We fed the beds with coop-born gold,
+The buds got loud, the highs got bold.
+Four pounds deep from just six green,
+Still the folks lined up, sight unseen.
+Not for sale, this gift we grow,
+Each new start makes the story glow.
+
+Scratch that ground, Petaluma pride,
+Sativa dreams on a compost ride.
+Starts in hand, we pass it back,
+Born from soil and a chicken shack.
+Oh, Petaluma Chicken Scratch —
+The legend grows, you can’t match that!
+
+If you get a male, don’t throw it away,
+Pair it right, let the garden play.
+Save the seeds, keep the flame,
+Write your chapter in the strain’s name.
+
+Scratch that ground, make your mark,
+Petaluma nights and backyard spark.
+Start to seed, pass it on,
+In our town, this legend’s strong.
+The roots run deep, and the vibe’s intact!
+The roots run deep, and the vibe’s intact!
+
+Burning Man crew said, “Turn it up!”
+Snicker Doodle made the flowers erupt.
+We fed the beds with coop-born gold,
+The buds got loud, the highs got bold.
+Four pounds deep from just six green,
+Still the folks lined up, sight unseen.
+Not for sale, this gift we grow,
+Each new start makes the story glow.
+
+If you get a male, don’t throw it away,
+Pair it right, let the garden play.
+Save the seeds, keep the flame,
+Write your chapter in the strain’s name.
+      </pre>
+    </section>
+  </main>
 </body>
 </html>
