Add canonical artist JSON-LD references

--- a/AshesAndEchos/WeDidStartThisFire/index.html
+++ b/AshesAndEchos/WeDidStartThisFire/index.html
@@ -8,13 +8,12 @@
   "url": "https://music.mycal.net/we-did-start-the-fire",
   "inAlbum": {
     "@type": "MusicAlbum",
-    "name": "Ashes and Echoes: Songs from the Playa, Stories from Fire and Steel",
-    "url": "https://music.mycal.net/ashes-and-echoes"
+    "@id": "https://music.mycal.net/albums/ashes-and-echoes",
+    "name": "Ashes and Echoes: Songs from the Playa, Stories from Fire and Steel"
   },
   "byArtist": {
-    "@type": "MusicGroup",
-    "name": "Mycal",
-    "url": "https://music.mycal.net"
+    "@type": "Person",
+    "@id": "https://music.mycal.net/#mycal"
   },
   "datePublished": "2025-08-16",
   "publisher": {
