--- a/AshesAndEchos/index.html
+++ b/AshesAndEchos/index.html
@@ -4,8 +4,8 @@
   "@type": "MusicAlbum",
   "name": "Ashes and Echoes – Songs from the Playa",
   "byArtist": {
-    "@type": "MusicGroup",
-    "name": "Mycal Music"
+    "@type": "Person",
+    "@id": "https://music.mycal.net/#mycal"
   },
   "url": "https://music.mycal.net",
   "genre": ["Burning Man", "Roots-folk", "Ambient", "Electronic"],
