--- a/AshesAndEchos/index1.html
+++ b/AshesAndEchos/index1.html
@@ -104,6 +104,7 @@
       "@id": "https://music.mycal.net/#ashes-and-echoes",
       "name": "Ashes and Echoes – Songs from the Playa",
       "byArtist": {
+        "@type": "Person",
         "@id": "https://music.mycal.net/#mycal"
       },
       "datePublished": "2025-08",
