--- a/albums/ashes-and-echoes/index.html
+++ b/albums/ashes-and-echoes/index.html
@@ -19,8 +19,8 @@
   "name": "Ashes and Echoes — Songs from the Playa",
   "alternateName": "Ashes and Echoes",
   "byArtist": {
-    "@type": "MusicGroup",
-    "name": "Mycal"
+    "@type": "Person",
+    "@id": "https://music.mycal.net/#mycal"
   },
   "genre": [
     "Folk",
