--- a/albums/ashes-and-echoes/tracks/dust-to-dust.html
+++ b/albums/ashes-and-echoes/tracks/dust-to-dust.html
@@ -179,8 +179,8 @@ My Cal Out!
     "position": 7,
     "inLanguage": "en",
     "byArtist": {
-      "@type": "MusicGroup",
-      "name": "Mycal"
+      "@type": "Person",
+      "@id": "https://music.mycal.net/#mycal"
     },
     "inAlbum": {
       "@type": "MusicAlbum",
