--- a/albums/ashes-and-echoes/tracks/no-authority-night-crew.html
+++ b/albums/ashes-and-echoes/tracks/no-authority-night-crew.html
@@ -66,8 +66,8 @@ No Authority Night Crew (ooooh Yaaaa)
     "duration": "PT2M41S",
     "inLanguage": "en",
     "byArtist": {
-      "@type": "MusicGroup",
-      "name": "Mycal"
+      "@type": "Person",
+      "@id": "https://music.mycal.net/#mycal"
     },
     "inAlbum": {
       "@type": "MusicAlbum",
