--- a/albums/ashes-and-echoes/tracks/overheard-at-burning-man.html
+++ b/albums/ashes-and-echoes/tracks/overheard-at-burning-man.html
@@ -165,8 +165,8 @@ after the burn.
     "position": 11,
     "inLanguage": "en",
     "byArtist": {
-      "@type": "MusicGroup",
-      "name": "Mycal"
+      "@type": "Person",
+      "@id": "https://music.mycal.net/#mycal"
     },
     "inAlbum": {
       "@type": "MusicAlbum",
