--- a/albums/ashes-and-echoes/tracks/speak-burner-to-me.html
+++ b/albums/ashes-and-echoes/tracks/speak-burner-to-me.html
@@ -146,8 +146,8 @@ Speak burner to them.
     "duration": "PT3M43S",
     "inLanguage": "en",
     "byArtist": {
-      "@type": "MusicGroup",
-      "name": "Mycal"
+      "@type": "Person",
+      "@id": "https://music.mycal.net/#mycal"
     },
     "inAlbum": {
       "@type": "MusicAlbum",
