--- a/albums/ashes-and-echoes/tracks/we-did-start-the-fire.html
+++ b/albums/ashes-and-echoes/tracks/we-did-start-the-fire.html
@@ -179,8 +179,8 @@ that burned before the map had names
     "duration": "PT6M29S",
     "inLanguage": "en",
     "byArtist": {
-      "@type": "MusicGroup",
-      "name": "Mycal"
+      "@type": "Person",
+      "@id": "https://music.mycal.net/#mycal"
     },
     "inAlbum": {
       "@type": "MusicAlbum",
