--- a/index.html
+++ b/index.html
@@ -11,6 +11,27 @@
   <link rel="apple-touch-icon" sizes="180x180" href="/apple-touch-icon.png">
   <link rel="manifest" href="/site.webmanifest">
   <link rel="stylesheet" href="/assets/css/style.css">
+  <script type="application/ld+json">
+  {
+    "@context": "https://schema.org",
+    "@type": "Person",
+    "@id": "https://music.mycal.net/#mycal",
+    "name": "Mycal",
+    "alternateName": ["Mike Johnson", "マイカル"],
+    "sameAs": [
+      "https://blog.mycal.net/about/#mycal",
+      "https://mycalmusic.bandcamp.com/",
+      "https://open.spotify.com/artist/5HgUqmIzyL8nF0jS1jSTeB",
+      "https://music.apple.com/us/artist/mycal/1830794420",
+      "https://www.pandora.com/artist/mycal/AR5Ktb2xXcgKm4X",
+      "https://music.amazon.com/artists/B003GMIO2A/mycal",
+      "https://music.youtube.com/channel/UCM7dxY_VuZh7aDYYO66yd9A",
+      "https://www.facebook.com/mycalmusic/",
+      "https://www.instagram.com/mycal.music/",
+      "https://www.tiktok.com/@mycal.music"
+    ]
+  }
+  </script>
 </head>
 <body>
   <header>
@@ -93,8 +114,8 @@
         "image": "https://music.mycal.net/assets/img/album/ashes-and-echoes-cover.jpg",
         "datePublished": "2025-08-15",
         "byArtist": {
-          "@type": "MusicGroup",
-          "name": "Mycal"
+          "@type": "Person",
+          "@id": "https://music.mycal.net/#mycal"
         },
         "genre": ["Folk", "Electronic", "Burning Man"],
         "url": "https://music.mycal.net/albums/ashes-and-echoes"
