--- a/albums/ashes-and-echoes/tracks/ash-and-echoes.html
+++ b/albums/ashes-and-echoes/tracks/ash-and-echoes.html
@@ -13,8 +13,8 @@
     "@id": "https://music.mycal.net/albums/ashes-and-echoes/tracks/ash-and-echoes",
     "name": "Ash and Echoes (The Temple Song)",
     "byArtist": {
-      "@type": "MusicGroup",
-      "name": "Mycal"
+      "@type": "Person",
+      "@id": "https://music.mycal.net/#mycal"
     },
     "inAlbum": {
       "@type": "MusicAlbum",
