--- a/albums/ashes-and-echoes/tracks/buck-bandersnatch-song.html
+++ b/albums/ashes-and-echoes/tracks/buck-bandersnatch-song.html
@@ -14,8 +14,8 @@
     "@id": "https://music.mycal.net/albums/ashes-and-echoes/tracks/buck-bandersnatch-song",
     "name": "The Buck Bandersnatch Song (Playa Dreams)",
     "byArtist": {
-      "@type": "MusicGroup",
-      "name": "Mycal"
+      "@type": "Person",
+      "@id": "https://music.mycal.net/#mycal"
     },
     "inAlbum": {
       "@type": "MusicAlbum",
