--- a/albums/ashes-and-echoes/tracks/fighting-wasnt-working.html
+++ b/albums/ashes-and-echoes/tracks/fighting-wasnt-working.html
@@ -77,8 +77,8 @@ back
     "duration": "PT2M59S",
     "inLanguage": "en",
     "byArtist": {
-      "@type": "MusicGroup",
-      "name": "Mycal"
+      "@type": "Person",
+      "@id": "https://music.mycal.net/#mycal"
     },
     "inAlbum": {
       "@type": "MusicAlbum",
