--- a/albums/ashes-and-echoes/tracks/i-was-meant-to-burn.html
+++ b/albums/ashes-and-echoes/tracks/i-was-meant-to-burn.html
@@ -147,8 +147,8 @@ burn it all down
     "duration": "PT3M45S",
     "inLanguage": "en",
     "byArtist": {
-      "@type": "MusicGroup",
-      "name": "Mycal"
+      "@type": "Person",
+      "@id": "https://music.mycal.net/#mycal"
     },
     "inAlbum": {
       "@type": "MusicAlbum",
