--- a/albums/ashes-and-echoes/tracks/petaluma-chicken-scratch.html
+++ b/albums/ashes-and-echoes/tracks/petaluma-chicken-scratch.html
@@ -13,8 +13,8 @@
     "@id": "https://music.mycal.net/albums/ashes-and-echoes/tracks/petaluma-chicken-scratch",
     "name": "Petaluma Chicken Scratch",
     "byArtist": {
-      "@type": "MusicGroup",
-      "name": "Mycal"
+      "@type": "Person",
+      "@id": "https://music.mycal.net/#mycal"
     },
     "inAlbum": {
       "@type": "MusicAlbum",
