--- a/albums/ashes-and-echoes/tracks/sparkle-pony.html
+++ b/albums/ashes-and-echoes/tracks/sparkle-pony.html
@@ -13,8 +13,8 @@
     "@id": "https://music.mycal.net/albums/ashes-and-echoes/tracks/sparkle-pony",
     "name": "Sparkle Pony",
     "byArtist": {
-      "@type": "MusicGroup",
-      "name": "Mycal"
+      "@type": "Person",
+      "@id": "https://music.mycal.net/#mycal"
     },
     "inAlbum": {
       "@type": "MusicAlbum",
