--- a/albums/ashes-and-echoes/tracks/we-did-start-the-fire.html
+++ b/albums/ashes-and-echoes/tracks/we-did-start-the-fire.html
@@ -27,7 +27,7 @@
 
   <main>
     <section class="hero">
-      <img src="/assets/img/tracks/start-a-fire-image.png" alt="Cover art for We Did Start the Fire (Burning Man History Jam)">
+      <img src="/assets/img/tracks/start-a-fire-image.jpg" alt="Cover art for We Did Start the Fire (Burning Man History Jam)">
       <div class="hero-content">
         <p class="meta">Ashes and Echoes — Track 1 · 6:29</p>
         <h1>We Did Start the Fire (Burning Man History Jam)</h1>
