Add hero markers to track pages

--- a/albums/ashes-and-echoes/tracks/buck-bandersnatch-song.html
+++ b/albums/ashes-and-echoes/tracks/buck-bandersnatch-song.html
@@ -38,6 +38,7 @@
 </head>
 <body>
   <main class="track-page">
+    <!-- HERO START -->
     <header class="track-header">
       <a href="/albums/ashes-and-echoes/" class="back-link">← Back to Ashes and Echoes</a>
       <h1>The Buck Bandersnatch Song (Playa Dreams)</h1>
@@ -56,6 +57,7 @@
         <a href="#" class="btn">YouTube Music</a>
       </div>
     </section>
+    <!-- HERO END -->
 
     <section class="track-description">
       <h2>About this track</h2>
