--- a/albums/ashes-and-echoes/tracks/ash-and-echoes.html
+++ b/albums/ashes-and-echoes/tracks/ash-and-echoes.html
@@ -37,6 +37,7 @@
 </head>
 <body>
   <main class="track-page">
+    <!-- HERO START -->
     <header class="track-header">
       <a href="/albums/ashes-and-echoes/" class="back-link">← Back to Ashes and Echoes</a>
       <h1>Ash and Echoes (The Temple Song)</h1>
@@ -54,6 +55,7 @@
         <a href="https://distrokid.com/hyperfollow/mycal/ashes-and-echoes-songs-from-the-playa-stories-from-fire-and-steel" class="btn">YouTube Music</a>
       </div>
     </section>
+    <!-- HERO END -->
 
     <section class="track-description">
       <h2>About this track</h2>
