--- a/albums/ashes-and-echoes/tracks/weird-steel.html
+++ b/albums/ashes-and-echoes/tracks/weird-steel.html
@@ -37,6 +37,7 @@
 </head>
 <body>
   <main class="track-page">
+    <!-- HERO START -->
     <header class="track-header">
       <a href="/albums/ashes-and-echoes/" class="back-link">← Back to Ashes and Echoes</a>
       <h1>Weird Steel</h1>
@@ -55,6 +56,7 @@
         <a href="#" class="btn">YouTube Music</a>
       </div>
     </section>
+    <!-- HERO END -->
 
     <section class="track-description">
       <h2>About this track</h2>
