Update Ashes and Echoes track hero sections

--- a/albums/ashes-and-echoes/tracks/ash-and-echoes.html
+++ b/albums/ashes-and-echoes/tracks/ash-and-echoes.html
@@ -36,25 +36,22 @@
   </script>
 </head>
 <body>
-  <main class="track-page">
+    <main class="track-page">
     <!-- HERO START -->
-    <header class="track-header">
-      <a href="/albums/ashes-and-echoes/" class="back-link">← Back to Ashes and Echoes</a>
-      <h1>Ash and Echoes (The Temple Song)</h1>
-      <p>Track 10 · 3:43 · Ashes and Echoes — Songs from the Playa</p>
-    </header>
-
-    <section class="track-media">
-      <img src="/assets/img/tracks/The-Temple-Song.jpg"
-           alt="Cover art for Ash and Echoes (The Temple Song)"
-           class="track-image">
-
-      <div class="track-links">
-        <a href="https://distrokid.com/hyperfollow/mycal/ashes-and-echoes-songs-from-the-playa-stories-from-fire-and-steel" class="btn">Listen on Spotify</a>
-        <a href="https://mycalmusic.bandcamp.com/album/ashes-and-echoes" class="btn">Bandcamp</a>
-        <a href="https://distrokid.com/hyperfollow/mycal/ashes-and-echoes-songs-from-the-playa-stories-from-fire-and-steel" class="btn">YouTube Music</a>
-      </div>
-    </section>
+    <main>
+      <section class="hero">
+        <img src="/assets/img/tracks/The-Temple-Song.jpg" alt="Cover art for Ash and Echoes (The Temple Song)">
+        <div class="hero-content">
+          <p class="meta">Track 10 · 3:43 · Ashes and Echoes — Songs from the Playa</p>
+          <h1>Ash and Echoes (The Temple Song)</h1>
+          <p>“Ash and Echoes (The Temple Song)” is the quiet center of the album — a hymn for the Temple, where feathers, photos, names and dust all meet the fire. It follows the walk in, the burn, and the strange lightness that comes after we let go of what we could never quite say out loud.</p>
+          <div class="button-row">
+            <a class="button" href="https://distrokid.com/hyperfollow/mycal/ashes-and-echoes-songs-from-the-playa-stories-from-fire-and-steel" target="_blank" rel="noopener">Stream</a>
+            <a class="button" href="/albums/ashes-and-echoes/">Back to album</a>
+          </div>
+        </div>
+      </section>
+    </main>
     <!-- HERO END -->
 
     <section class="track-description">
