--- a/albums/ashes-and-echoes/tracks/buck-bandersnatch-song.html
+++ b/albums/ashes-and-echoes/tracks/buck-bandersnatch-song.html
@@ -37,26 +37,22 @@
   </script>
 </head>
 <body>
-  <main class="track-page">
+    <main class="track-page">
     <!-- HERO START -->
-    <header class="track-header">
-      <a href="/albums/ashes-and-echoes/" class="back-link">← Back to Ashes and Echoes</a>
-      <h1>The Buck Bandersnatch Song (Playa Dreams)</h1>
-      <p>Track 9 · 3:14 · Ashes and Echoes — Songs from the Playa</p>
-    </header>
-
-    <section class="track-media">
-      <img src="/assets/img/tracks/The-Buck-Bandersnatch-Song.jpg"
-           alt="Cover art for The Buck Bandersnatch Song (Playa Dreams)"
-           class="track-image">
-
-      <div class="track-links">
-        <!-- Replace these href values with real links -->
-        <a href="#" class="btn">Listen on Spotify</a>
-        <a href="#" class="btn">Bandcamp</a>
-        <a href="#" class="btn">YouTube Music</a>
-      </div>
-    </section>
+    <main>
+      <section class="hero">
+        <img src="/assets/img/tracks/The-Buck-Bandersnatch-Song.jpg" alt="Cover art for The Buck Bandersnatch Song (Playa Dreams)">
+        <div class="hero-content">
+          <p class="meta">Track 9 · 3:14 · Ashes and Echoes — Songs from the Playa</p>
+          <h1>The Buck Bandersnatch Song (Playa Dreams)</h1>
+          <p>“The Buck Bandersnatch Song (Playa Dreams)” drifts through runes, tarot pulls, JuPlaya nights and temple cloth embers. It’s a whispered confession about surrender and joy, etched in Wunjo, dust, and the sense that the Playa might be ending something — or starting something entirely new.</p>
+          <div class="button-row">
+            <a class="button" href="#" target="_blank" rel="noopener">Stream</a>
+            <a class="button" href="/albums/ashes-and-echoes/">Back to album</a>
+          </div>
+        </div>
+      </section>
+    </main>
     <!-- HERO END -->
 
     <section class="track-description">
