--- a/albums/ashes-and-echoes/tracks/weird-steel.html
+++ b/albums/ashes-and-echoes/tracks/weird-steel.html
@@ -36,26 +36,22 @@
   </script>
 </head>
 <body>
-  <main class="track-page">
+    <main class="track-page">
     <!-- HERO START -->
-    <header class="track-header">
-      <a href="/albums/ashes-and-echoes/" class="back-link">← Back to Ashes and Echoes</a>
-      <h1>Weird Steel</h1>
-      <p>Track 6 · 3:42 · Ashes and Echoes — Songs from the Playa</p>
-    </header>
-
-    <section class="track-media">
-      <img src="/assets/img/tracks/weird-steel.jpg"
-           alt="Cover art for Weird Steel"
-           class="track-image">
-
-      <div class="track-links">
-        <!-- Replace these href values with real links -->
-        <a href="#" class="btn">Listen on Spotify</a>
-        <a href="#" class="btn">Bandcamp</a>
-        <a href="#" class="btn">YouTube Music</a>
-      </div>
-    </section>
+    <main>
+      <section class="hero">
+        <img src="/assets/img/tracks/weird-steel.jpg" alt="Cover art for Weird Steel">
+        <div class="hero-content">
+          <p class="meta">Track 6 · 3:42 · Ashes and Echoes — Songs from the Playa</p>
+          <h1>Weird Steel</h1>
+          <p>“Weird Steel” is the Reared in Steel anthem — forged in Petaluma, broadcast from 9 &amp; A. It’s a shout-out to Rhino Redemption, Medusa, the Fire Kathedral, GUMA, couches in the sky, grilled cheese, slushies, MOOP strike teams, and the dusty crew that keeps building year after year. Camp lore turned into a sing-along.</p>
+          <div class="button-row">
+            <a class="button" href="#" target="_blank" rel="noopener">Stream</a>
+            <a class="button" href="/albums/ashes-and-echoes/">Back to album</a>
+          </div>
+        </div>
+      </section>
+    </main>
     <!-- HERO END -->
 
     <section class="track-description">
