--- a/albums/ashes-and-echoes/tracks/burner-girl.html
+++ b/albums/ashes-and-echoes/tracks/burner-girl.html
@@ -36,26 +36,22 @@
   </script>
 </head>
 <body>
-  <main class="track-page">
+    <main class="track-page">
     <!-- HERO START -->
-    <header class="track-header">
-      <a href="/albums/ashes-and-echoes/" class="back-link">← Back to Ashes and Echoes</a>
-      <h1>Burner Girl</h1>
-      <p>Track 3 · 4:00 · Ashes and Echoes — Songs from the Playa</p>
-    </header>
-
-    <section class="track-media">
-      <img src="/assets/img/tracks/Burner-Girl.jpg"
-           alt="Cover art for Burner Girl"
-           class="track-image">
-
-      <div class="track-links">
-        <!-- Replace these href values with real links -->
-        <a href="#" class="btn">Listen on Spotify</a>
-        <a href="#" class="btn">Bandcamp</a>
-        <a href="#" class="btn">YouTube Music</a>
-      </div>
-    </section>
+    <main>
+      <section class="hero">
+        <img src="/assets/img/tracks/Burner-Girl.jpg" alt="Cover art for Burner Girl">
+        <div class="hero-content">
+          <p class="meta">Track 3 · 4:00 · Ashes and Echoes — Songs from the Playa</p>
+          <h1>Burner Girl</h1>
+          <p>“Burner Girl” is a desert crush anthem — a neon-lit love song about finding your orbit around a wild, glowing soul on the Playa. It lives where lasers, basslines, and dust storms collide: art cars rolling by, heartbeat to heartbeat, two burners spinning through the night like they were meant to meet there all along.</p>
+          <div class="button-row">
+            <a class="button" href="#" target="_blank" rel="noopener">Stream</a>
+            <a class="button" href="/albums/ashes-and-echoes/">Back to album</a>
+          </div>
+        </div>
+      </section>
+    </main>
     <!-- HERO END -->
 
     <section class="track-description">
