--- a/albums/ashes-and-echoes/tracks/petaluma-chicken-scratch.html
+++ b/albums/ashes-and-echoes/tracks/petaluma-chicken-scratch.html
@@ -36,25 +36,22 @@
   </script>
 </head>
 <body>
-  <main class="track-page">
+    <main class="track-page">
     <!-- HERO START -->
-    <header class="track-header">
-      <a href="/albums/ashes-and-echoes/" class="back-link">← Back to Ashes and Echoes</a>
-      <h1>Petaluma Chicken Scratch</h1>
-      <p>Track 14 · 5:49 · Ashes and Echoes — Songs from the Playa</p>
-    </header>
-
-    <section class="track-media">
-      <img src="/assets/img/tracks/petaluma-chicken-scratch.jpg"
-           alt="Cover art for Petaluma Chicken Scratch"
-           class="track-image">
-
-      <div class="track-links">
-        <a href="#" class="btn">Listen on Spotify</a>
-        <a href="#" class="btn">Bandcamp</a>
-        <a href="#" class="btn">YouTube Music</a>
-      </div>
-    </section>
+    <main>
+      <section class="hero">
+        <img src="/assets/img/tracks/petaluma-chicken-scratch.jpg" alt="Cover art for Petaluma Chicken Scratch">
+        <div class="hero-content">
+          <p class="meta">Track 14 · 5:49 · Ashes and Echoes — Songs from the Playa</p>
+          <h1>Petaluma Chicken Scratch</h1>
+          <p>“Petaluma Chicken Scratch” is a celebration of backyard legends — homegrown strains, compost-powered magic, Burning Man gifting culture, and the way a local story becomes a mythology shared across seasons. Part roots-folk, part playful anthem, all Petaluma pride.</p>
+          <div class="button-row">
+            <a class="button" href="#" target="_blank" rel="noopener">Stream</a>
+            <a class="button" href="/albums/ashes-and-echoes/">Back to album</a>
+          </div>
+        </div>
+      </section>
+    </main>
     <!-- HERO END -->
 
     <section class="track-description">
