--- a/albums/ashes-and-echoes/tracks/sparkle-pony.html
+++ b/albums/ashes-and-echoes/tracks/sparkle-pony.html
@@ -36,26 +36,22 @@
   </script>
 </head>
 <body>
-  <main class="track-page">
+    <main class="track-page">
     <!-- HERO START -->
-    <header class="track-header">
-      <a href="/albums/ashes-and-echoes/" class="back-link">← Back to Ashes and Echoes</a>
-      <h1>Sparkle Pony</h1>
-      <p>Track 8 · 3:08 · Ashes and Echoes — Songs from the Playa</p>
-    </header>
-
-    <section class="track-media">
-      <img src="/assets/img/tracks/sparkel-pony.jpg"
-           alt="Cover art for Sparkle Pony"
-           class="track-image">
-
-      <div class="track-links">
-        <!-- Replace these href values with real links -->
-        <a href="#" class="btn">Listen on Spotify</a>
-        <a href="#" class="btn">Bandcamp</a>
-        <a href="#" class="btn">YouTube Music</a>
-      </div>
-    </section>
+    <main>
+      <section class="hero">
+        <img src="/assets/img/tracks/sparkel-pony.jpg" alt="Cover art for Sparkle Pony">
+        <div class="hero-content">
+          <p class="meta">Track 8 · 3:08 · Ashes and Echoes — Songs from the Playa</p>
+          <h1>Sparkle Pony</h1>
+          <p>“Sparkle Pony” is a satire sung from the Sparkle Pony’s own throne — chopper drops, billionaire audiences, filters, clout, and a 24-hour dust runway before wheels up. It’s both roast and portrait: the Playa as backdrop for one more glitter-drenched personal brand.</p>
+          <div class="button-row">
+            <a class="button" href="#" target="_blank" rel="noopener">Stream</a>
+            <a class="button" href="/albums/ashes-and-echoes/">Back to album</a>
+          </div>
+        </div>
+      </section>
+    </main>
     <!-- HERO END -->
 
     <section class="track-description">
